# all_in-BEST2025

./: .gitignore  README.md  data.txt  dataset_formatter.py  main.py  models.py  pyproject.toml  requirements.txt
data/: dataset_facebook-events-scraper_2025-11-28_10-21-23-668-formatted.json  dataset_facebook-events-scraper_2025-11-28_10-21-23-668.json
instance/: site.db
static/data/: dataset_facebook-events-scraper_2025-11-28_10-21-23-668-formatted.json
static/js/: chat.js  chatbot_admin.js  map.js  script.js
static/styles/: chat.css  login.css  pop_events.css  styles.css  styles_admin.css
templates/: base.html  index.html  login.html  menu.html  menu_admin.html  register.html
