[project]
name = "all-in-best2025"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "flask>=3.1.2",
    "flask-login>=0.6.3",
    "flask-sqlalchemy>=3.1.1",
    "google-genai>=1.52.0",
    "gunicorn>=23.0.0",
    "requests>=2.32.5",
    "werkzeug>=3.1.3",
    "geopy>=2.4.1",
]
